# berlin-marso-hackathon

./: .gitignore  README.md  SUBMISSION.md  eval.py  eval_all.py  kaggle_dataset_description.md  pixi.toml  pyproject.toml  setup_windows.ps1  starter.ipynb  submission.example.yaml
conf/: config.yaml
conf/difficulty/: easy.yaml  hard.yaml  medium.yaml
conf/eval/: default.yaml
examples/: random_policy.py  scripted_policy.py
il/: README.md  _truncate_demos.py  download_demos.py  gen_demos.py  run_ablations.py  train.py
il/baselines/diffusion_policy/: train.py  train_rgbd.py
il/baselines/diffusion_policy/diffusion_policy/: lerobot_encoder.py
il/conf/: train.yaml
il/conf/method/: dp.yaml  dp_rgb.yaml
il/demos/easy/: trajectory.rgb.pd_ee_delta_pos.physx_cuda.json
warehouse_sort/: env.py  il_policy.py  utils.py
