[project]
name = "warehouse_sort"
version = "0.1.0"
description = "Warehouse Colour-Sort Pick-and-Place hackathon starter (ManiSkill 3)"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["warehouse_sort"]
py-modules = ["test", "eval"]
